--- a/rs/sns/swap/Cargo.toml
+++ b/rs/sns/swap/Cargo.toml
@@ -30,6 +30,7 @@ ic-base-types = { path = "../../types/base_types" }
 ic-canister-log = { path = "../../rust_canisters/canister_log" }
 ic-canisters-http-types = { path = "../../rust_canisters/http_types" }
 ic-ledger-core = { path = "../../ledger_suite/common/ledger_core" }
+ic-cdk = { workspace = true }
 ic-metrics-encoder = "1"
 ic-nervous-system-canisters = { path = "../../nervous_system/canisters" }
 ic-nervous-system-clients = { path = "../../nervous_system/clients" }
