--- a/.github/workflows-source/schedule-daily.yml
+++ b/.github/workflows-source/schedule-daily.yml
@@ -198,7 +198,7 @@ jobs:
         id: setup-environment-deps
         shell: bash
         run: |
-          pip3 install --ignore-installed -r requirements.txt
+          PIP_BREAK_SYSTEM_PACKAGES=1 pip3 install --ignore-installed -r requirements.txt
           cargo install wasm-pack --version "${CARGO_WASMPACK_VERSION}"
           source "${NVM_DIR}/nvm.sh"
           nvm use ${DEFAULT_NODE_VERSION}
