--- a/.github/workflows/ci-pr-only.yml
+++ b/.github/workflows/ci-pr-only.yml
@@ -151,7 +151,7 @@ jobs:
         id: setup-python-deps
         shell: bash
         run: |
-          pip3 install --ignore-installed -r requirements.txt
+          PIP_BREAK_SYSTEM_PACKAGES=1 pip3 install --ignore-installed -r requirements.txt
       - name: Dependency Scan for Pull Request
         id: dependencies-check
         shell: bash
