--- a/.github/workflows-source/release-testing.yml
+++ b/.github/workflows-source/release-testing.yml
@@ -127,7 +127,7 @@ jobs:
           BAZEL_COMMAND: "test"
           BAZEL_TARGETS: "//rs/tests/..."
           BAZEL_CI_CONFIG: "--config=ci --repository_cache=/cache/bazel"
-          BAZEL_EXTRA_ARGS_RULES: "--test_tag_filters=system_test_hotfix"
+          BAZEL_EXTRA_ARGS: "--keep-going --test_tag_filters=system_test_hotfix"
           BUILDEVENT_APIKEY: ${{ secrets.HONEYCOMB_API_TOKEN }}
       - <<: *bazel-bep
 
@@ -197,7 +197,7 @@ jobs:
           BAZEL_COMMAND: "test"
           BAZEL_TARGETS: "//rs/tests/dre:guest_os_qualification"
           BAZEL_CI_CONFIG: "--config=systest --repository_cache=/cache/bazel"
-          BAZEL_EXTRA_ARGS_RULES: "--test_timeout=7200 --test_env=OLD_VERSION=${{ matrix.version }}"
+          BAZEL_EXTRA_ARGS: "--keep_going --test_timeout=7200 --test_env=OLD_VERSION=${{ matrix.version }}"
           BUILDEVENT_APIKEY: ${{ secrets.HONEYCOMB_API_TOKEN }}
       - <<: *bazel-bep
         name: Upload bazel bep for version ${{ matrix.version }}
