--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -54,15 +54,15 @@ jobs:
         env:
           DOCKER_HUB_USER: ${{ vars.DOCKER_HUB_USER }}
           DOCKER_HUB_PASSWORD_RO: ${{ secrets.DOCKER_HUB_PASSWORD_RO }}
-      - name: Set BAZEL_EXTRA_ARGS_RULES
+      - name: Set BAZEL_EXTRA_ARGS
         shell: bash
         run: |
           set -xeuo pipefail
           if [[ "${{ github.event_name }}" == 'merge_group' ]]; then
-            echo "BAZEL_EXTRA_ARGS_RULES=--test_timeout_filters=short,moderate --flaky_test_attempts=3" >> $GITHUB_ENV
+            echo "BAZEL_EXTRA_ARGS=--keep_going --test_timeout_filters=short,moderate --flaky_test_attempts=3" >> $GITHUB_ENV
           fi
           if [[ $BRANCH_NAME =~ ^hotfix-.* ]]; then
-            echo "BAZEL_EXTRA_ARGS_RULES=--test_timeout_filters=short,moderate" >> $GITHUB_ENV
+            echo "BAZEL_EXTRA_ARGS=--keep_going --test_timeout_filters=short,moderate" >> $GITHUB_ENV
           fi
       - name: Run Bazel Test All
         id: bazel-test-all
@@ -77,7 +77,7 @@ jobs:
           BAZEL_TARGETS: "//..."
           BAZEL_CI_CONFIG: "--config=ci --repository_cache=/cache/bazel"
           # check if PR title contains release and set timeout filters accordingly
-          BAZEL_EXTRA_ARGS_RULES: ${{ env.BAZEL_EXTRA_ARGS_RULES || '' }}
+          BAZEL_EXTRA_ARGS: ${{ env.BAZEL_EXTRA_ARGS || '--keep_going' }}
           BUILDEVENT_APIKEY: ${{ secrets.HONEYCOMB_API_TOKEN }}
       - name: Upload bazel-bep
         # runs only if previous step succeeded or failed;
@@ -175,8 +175,7 @@ jobs:
         with:
           BAZEL_CI_CONFIG: "--config=ci --config macos_ci"
           BAZEL_COMMAND: test
-          BAZEL_EXTRA_ARGS: '--test_tag_filters=test_macos'
-          BAZEL_STARTUP_ARGS: "--output_base /var/tmp/bazel-output/${CI_RUN_ID}"
+          BAZEL_EXTRA_ARGS: '--test_tag_filters=test_macos --output_base /var/tmp/bazel-output/${CI_RUN_ID}'
           BAZEL_TARGETS: "//rs/... //publish/binaries/..."
           BUILDEVENT_APIKEY: ${{ secrets.HONEYCOMB_API_TOKEN }}
       - name: Upload bazel-bep
