--- a/.github/actions/bazel-test-all/action.yaml
+++ b/.github/actions/bazel-test-all/action.yaml
@@ -12,6 +12,7 @@ inputs:
     default: '--config=ci'
   BAZEL_EXTRA_ARGS:
     required: false
+    degault: ''
   BAZEL_STARTUP_ARGS:
     required: false
     default: '--output_base=/var/tmp/bazel-output/'
