--- a/rs/crypto/BUILD.bazel
+++ b/rs/crypto/BUILD.bazel
@@ -39,7 +39,6 @@ DEPENDENCIES = [
     "//rs/types/base_types",
     "//rs/types/types",
     "@crate_index//:bincode",
-    "@crate_index//:clap_3_2_25",
     "@crate_index//:hex",
     "@crate_index//:parking_lot",
     "@crate_index//:rustls",
@@ -145,7 +144,7 @@ rust_binary(
         "//rs/monitoring/adapter_metrics/server",
         "//rs/monitoring/logger",
         "//rs/monitoring/metrics",
-        "@crate_index//:clap_3_2_25",
+        "@crate_index//:clap",
         "@crate_index//:slog",
         "@crate_index//:tempfile",
         "@crate_index//:tokio",
