--- a/ic-os/components/BUILD.bazel
+++ b/ic-os/components/BUILD.bazel
@@ -4,6 +4,8 @@ load("guestos.bzl", guestos_component_files = "component_files")
 load("hostos.bzl", hostos_component_files = "component_files")
 load("setupos.bzl", setupos_component_files = "component_files")
 
+package(default_visibility = ["//ic-os:__subpackages__"])
+
 PUBLIC_GUESTOS_EXPORTS = [
     "ic/ic.json5.template",
     "networking/dev-certs/canister_http_test_ca.cert",
@@ -23,6 +25,20 @@ exports_files(
         "//ic-os/guestos:__subpackages__",
         "//ic-os/hostos:__subpackages__",
         "//ic-os/setupos:__subpackages__",
+    ],
+)
+
+genrule(
+    name = "commit_timestamp_txt",
+    outs = ["commit_timestamp.txt"],
+    cmd = select({
+        "//bazel:is_release_build": "git show -s --format=%ct > $@",
+        # Use a constant in non-release builds to improve caching.
+        "//conditions:default": "echo 4000000000 > $@",
+    }),
+    tags = [
+        "local",
+        "no-cache",
     ],
 )
 
