--- a/.github/workflows/slack-workflow-run.yml
+++ b/.github/workflows/slack-workflow-run.yml
@@ -7,6 +7,8 @@ on:
     branches:
       - master
       - rc--*
+    tags:
+      - release-*
     workflows:
       - Schedule Daily
       - Schedule RC
