--- a/rs/sns/swap/BUILD.bazel
+++ b/rs/sns/swap/BUILD.bazel
@@ -33,6 +33,7 @@ DEPENDENCIES = [
     "@crate_index//:comparable",
     "@crate_index//:hex",
     "@crate_index//:ic-cdk",
+    "@crate_index//:ic-cdk-timers",
     "@crate_index//:ic-metrics-encoder",
     "@crate_index//:ic-stable-structures",
     "@crate_index//:itertools",
