Revert "chore: move the xnet endpoint under rs/http_endpoints and share ownership with the NET team (#1762)"
This reverts commit 0161abba3c535d26599ed843b770feba6cd4442b.

--- a/rs/replica/Cargo.toml
+++ b/rs/replica/Cargo.toml
@@ -21,7 +21,6 @@ ic-cycles-account-manager = { path = "../cycles_account_manager" }
 ic-execution-environment = { path = "../execution_environment" }
 ic-http-endpoints-metrics = { path = "../http_endpoints/metrics" }
 ic-http-endpoints-public = { path = "../http_endpoints/public" }
-ic-http-endpoints-xnet = { path = "../http_endpoints/xnet" }
 ic-https-outcalls-adapter-client = { path = "../https_outcalls/client" }
 ic-interfaces = { path = "../interfaces" }
 ic-interfaces-certified-stream-store = { path = "../interfaces/certified_stream_store" }
@@ -42,6 +41,7 @@ ic-state-manager = { path = "../state_manager" }
 ic-sys = { path = "../sys" }
 ic-tracing = { path = "../monitoring/tracing" }
 ic-types = { path = "../types/types" }
+ic-xnet-endpoint = { path = "../xnet/endpoint" }
 ic-xnet-payload-builder = { path = "../xnet/payload_builder" }
 libc = { workspace = true }
 nix = { workspace = true }
