--- a/Cargo.toml
+++ b/Cargo.toml
@@ -669,8 +669,8 @@ tokio-rustls = { version = "0.26.0", default-features = false, features = [
     "ring",
 ] }
 tokio-util = { version = "0.7.12", features = ["full"] }
-tonic = "0.12.0"
-tonic-build = "0.12.0"
+tonic = "=0.12.0"
+tonic-build = "=0.12.0"
 tower = { version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.5.2", features = [
     "cors",
