--- a/rs/ic_os/release/BUILD.bazel
+++ b/rs/ic_os/release/BUILD.bazel
@@ -13,6 +13,7 @@ OBJECTS = {
     "vsock_host": "//rs/ic_os/vsock/host:vsock_host",
     "metrics-proxy": "@crate_index//:metrics-proxy__metrics-proxy",
     "nss_icos": "//rs/ic_os/nss_icos",
+    "metrics_tool": "//rs/ic_os/metrics_tool:metrics_tool_bin",
 }
 
 [release_strip_binary(
