--- a/rs/crypto/internal/crypto_lib/threshold_sig/tecdsa/test_utils/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/threshold_sig/tecdsa/test_utils/BUILD.bazel
@@ -14,12 +14,14 @@ rust_library(
         "//rs/crypto/sha2",
         "//rs/types/types",
         "@crate_index//:assert_matches",
-        "@crate_index//:bitcoin_0_32",
+        "@crate_index//:bitcoin",
         "@crate_index//:ed25519-dalek",
+        "@crate_index//:hex",
         "@crate_index//:k256",
         "@crate_index//:p256",
         "@crate_index//:rand",
         "@crate_index//:schnorr_fun",
+        "@crate_index//:secp256k1",
         "@crate_index//:sha2",
     ],
 )
