--- a/rs/crypto/internal/crypto_lib/threshold_sig/tecdsa/test_utils/Cargo.toml
+++ b/rs/crypto/internal/crypto_lib/threshold_sig/tecdsa/test_utils/Cargo.toml
@@ -9,7 +9,9 @@ documentation.workspace = true
 [dependencies]
 assert_matches = { workspace = true }
 ed25519-dalek = { workspace = true }
-bitcoin = { version = "0.32.2", default-features = false }
+bitcoin = { version = "0.28.2" }
+hex = "0.4"
+secp256k1 = { version = "0.22", features = ["global-context", "rand-std"] }
 ic-crypto-internal-threshold-sig-ecdsa = { path = ".." }
 ic-crypto-sha2 = { path = "../../../../../sha2" }
 ic-types = { path = "../../../../../../types/types" }
