--- a/ic-os/components/ic/ic.json5.template
+++ b/ic-os/components/ic/ic.json5.template
@@ -504,7 +504,7 @@ table ip6 filter {\n\
     },
 
     registration: {
-        nns_url: "{{ nns_url }}",
+        nns_url: "{{ nns_urls }}",
         nns_pub_key_pem: "/var/lib/ic/data/nns_public_key.pem",
         node_operator_pem: "/var/lib/ic/data/node_operator_private_key.pem"
     },
