enable tsig during init

--- a/rs/tests/consensus/BUILD.bazel
+++ b/rs/tests/consensus/BUILD.bazel
@@ -22,6 +22,7 @@ system_test_nns(
     deps = [
         # Keep sorted.
         "//rs/backup",
+        "//rs/registry/subnet_features",
         "//rs/registry/subnet_type",
         "//rs/tests/consensus/tecdsa/utils",
         "//rs/tests/consensus/utils",
