--- a/rs/tests/consensus/Cargo.toml
+++ b/rs/tests/consensus/Cargo.toml
@@ -21,6 +21,7 @@ ic-nns-constants = { path = "../../nns/constants" }
 ic-nns-governance-api = { path = "../../nns/governance/api" }
 ic-recovery = { path = "../../recovery" }
 ic-registry-routing-table = { path = "../../registry/routing_table" }
+ic-registry-subnet-features = { path = "../../registry/subnet_features" }
 ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-system-test-driver = { path = "../driver" }
 ic-types = { path = "../../types/types" }
