--- a/rs/tests/nns/nns_dapp/Cargo.toml
+++ b/rs/tests/nns/nns_dapp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nns-dapp"
+name = "nns_dapp"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -9,7 +9,7 @@ documentation.workspace = true
 [dependencies]
 ic-ledger-core = { path = "../../../ledger_suite/common/ledger_core" }
 icp-ledger = { path = "../../../ledger_suite/icp" }
-ic-icrc1 = { path = "../../../ledger_suite/icrc1" }
+ic-icrc1-ledger = { path = "../../../ledger_suite/icrc1/ledger" }
 ic-nns-constants = { path = "../../../nns/constants" }
 ic-registry-subnet-type = { path = "../../../registry/subnet_type" }
 ic-system-test-driver = { path = "../../driver" }
