--- a/rs/tests/sdk/Cargo.toml
+++ b/rs/tests/sdk/Cargo.toml
@@ -16,7 +16,7 @@ ic_consensus_system_test_utils = { path = "../consensus/utils" }
 reqwest = { workspace = true }
 serde_json = { workspace = true }
 slog = { workspace = true }
-tests = { path = "../" }
+nns_dapp = { path = "../nns/nns_dapp" }
 
 [[bin]]
 name = "dfx_check_old_wallet_version_test"
