--- a/bazel/proto/BUILD.bazel
+++ b/bazel/proto/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
+load("@rules_go//proto:def.bzl", "go_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
 package(default_visibility = ["//visibility:public"])
