chore(IDX): update concurrency logic (#1958)
This simplifies the concurrency logic. The fallback to `github.run_id`
is not really needed - the only scenarios where this would happen is for
scheduled jobs or manually triggered jobs and concurrency rules
shouldn't be necessary there.

---------

Co-authored-by: IDX GitHub Automation <IDX GitHub Automation>

--- a/.github/workflows/release-testing.yml
+++ b/.github/workflows/release-testing.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 # new commits interrupt any running workflow on the same branch
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 env:
   CI_COMMIT_SHA: ${{ github.sha }}
