--- a/.github/workflows/bazel-lockfile.yml
+++ b/.github/workflows/bazel-lockfile.yml
@@ -9,6 +9,7 @@ on:
   merge_group:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  pull_request:
   push:
     branches:
       # master is checked for up-to-date lockfile
@@ -19,7 +20,7 @@ on:
 # runs for the same workflow are cancelled on PRs but not on master
 # (logic copied from main workflow)
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
 jobs:
