test(IDX-3182): inline the nns_dapp system-test & dynamic testnets (#1956)
What
===

* Inline the nns_dapp system-test from `//rs/tests:test` into its
binary.
* Move the nns_dapp shared code from `//rs/tests:tests` into a dedicated
library in `//rs/tests/nns/nns_dapp`
* Move the nns_dapp system-test from `/rs/tests/gix` to `/rs/tests/nns`
and update the ownership accordingly since the NNS Dapp is now owned by
the NNS team.
* Make sure that the dynamic testnets in
`//rs/tests/testing_verification/testnets/...` don't import the
`//rs/tests:tests` and other unneeded `DEPENDENCIES` anymore.

Why 
===
This is part of
[IDX-3144](https://dfinity.atlassian.net/browse/IDX-3144),
[SDKTG-391](https://dfinity.atlassian.net/browse/SDKTG-391) and
[IDX-3182](https://dfinity.atlassian.net/browse/IDX-3182) to get rid of
the huge and expensive (in terms of build time) `//rs/tests:tests`
library. It will improve CI times and make working on system-tests more
efficient.



[IDX-3144]:
https://dfinity.atlassian.net/browse/IDX-3144?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[SDKTG-391]:
https://dfinity.atlassian.net/browse/SDKTG-391?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[IDX-3182]:
https://dfinity.atlassian.net/browse/IDX-3182?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -363,6 +363,7 @@ members = [
     "rs/tests/nested",
     "rs/tests/nns/sns",
     "rs/tests/nns/ic_mainnet_nns_recovery",
+    "rs/tests/nns/nns_dapp",
     "rs/tests/node",
     "rs/tests/sdk",
     "rs/tests/test_canisters/http_counter",
