--- a/.github/workflows/bazel-lockfile.yml
+++ b/.github/workflows/bazel-lockfile.yml
@@ -50,7 +50,7 @@ jobs:
     container:
       image: ghcr.io/dfinity/ic-build@sha256:115daa5ad5149182bb0416cbe5730f305be3bb2f48df576bc2c23067eefce84b
       options: >-
-        -e NODE_NAME --privileged --cgroupns host -v /cache:/cache -v /var/sysimage:/var/sysimage -v /var/tmp:/var/tmp -v /ceph-s3-info:/ceph-s3-info
+        -e NODE_NAME
     runs-on:
       group: zh1
       labels: dind-large
