--- a/.github/workflows/bazel-lockfile.yml
+++ b/.github/workflows/bazel-lockfile.yml
@@ -50,7 +50,7 @@ jobs:
     container:
       image: ghcr.io/dfinity/ic-build@sha256:115daa5ad5149182bb0416cbe5730f305be3bb2f48df576bc2c23067eefce84b
       options: >-
-        -e NODE_NAME
+        -e NODE_NAME -v /cache:/cache
     runs-on:
       group: zh1
       labels: dind-large
@@ -94,7 +94,6 @@ jobs:
           BAZEL_TARGETS: "//..."
           BAZEL_EXTRA_ARGS: '--lockfile_mode=update --nobuild'
           BAZEL_CI_CONFIG: "--config=ci --repository_cache=/cache/bazel"
-          # check if PR title contains release and set timeout filters accordingly
           BUILDEVENT_APIKEY: ${{ secrets.HONEYCOMB_API_TOKEN }}
 
       - uses: actions/upload-artifact@v4
