Revert "chore(IDX): update concurrency logic (#1958)"
This reverts commit ab3378422a388faacafe9106071355a52c7c0f71.

--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -16,7 +16,7 @@ on:
 
 # runs for the same workflow are cancelled on PRs but not on master
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  group: ${{ github.workflow }}-${{ github.head_ref && github.ref || github.run_id }}
   cancel-in-progress: true
 
 permissions: read-all
