AP-based eviction

--- a/rs/canister_sandbox/BUILD.bazel
+++ b/rs/canister_sandbox/BUILD.bazel
@@ -10,6 +10,7 @@ DEPENDENCIES = [
     "//rs/cycles_account_manager",
     "//rs/embedders",
     "//rs/interfaces",
+    "//rs/interfaces/state_manager",
     "//rs/limits",
     "//rs/memory_tracker",
     "//rs/monitoring/logger",
@@ -43,6 +44,7 @@ DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/registry/routing_table",
+    "//rs/test_utilities",
     "//rs/test_utilities/types",
     "//rs/types/management_canister_types",
     "@crate_index//:mockall",
