--- a/rs/canister_sandbox/Cargo.toml
+++ b/rs/canister_sandbox/Cargo.toml
@@ -18,6 +18,7 @@ ic-config = { path = "../config" }
 ic-limits = { path = "../limits" }
 ic-cycles-account-manager = { path = "../cycles_account_manager" }
 ic-embedders = { path = "../embedders" }
+ic-interfaces-state-manager = { path = "../interfaces/state_manager" }
 ic-logger = { path = "../monitoring/logger" }
 ic-metrics = { path = "../monitoring/metrics" }
 ic-replicated-state = { path = "../replicated_state" }
@@ -46,6 +47,7 @@ which = "4.2.2"
 [dev-dependencies]
 ic-management-canister-types = { path = "../types/management_canister_types" }
 ic-registry-routing-table = { path = "../registry/routing_table" }
+ic-test-utilities = { path = "../test_utilities" }
 # This makes the dependencies of the binary more consistent
 # with the dependencies of execution environment tests and
 # allows the binary to reuse most of the build artifacts
