feat(IDX): enable bzlmod (#1959)
This turns on [Bazel modules](https://bazel.build/external/module) and
moves some of our (Bazel) dependency declarations to `MODULE.bazel`.
This means those dependencies are specified declaratively and not
imperatively as was the case in the `WORKSPACE`. This also allows us to
update some dependencies, like `rules_python`, which previously created
conflicts in transitive dependencies.

Some dependencies were also replaced (`rules_gazelle` -> `gazelle`).

This also adds a new workflow that ensures the Bazel lockfile,
`MODULE.bazel.lock`, is up to date on all the platforms we support
(Apple Intel, Apple Silicon, Linux x86). See workflow file for logic and
details.

---------

Co-authored-by: Marko Kosmerl <marko.kosmerl@dfinity.org>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,5 @@
-load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@bazel_skylib//rules:common_settings.bzl", "string_setting")
+load("@gazelle//:def.bzl", "gazelle")
 load("@rules_python//python:pip.bzl", "compile_pip_requirements")
 
 package(default_visibility = ["//visibility:public"])
@@ -79,19 +79,19 @@ gazelle(
 
 alias(
     name = "gobin",
-    actual = "@go_sdk//:bin/go",
+    actual = "@rules_go//go",
     visibility = ["//visibility:public"],
 )
 
-# Builds python dependencies
+# Builds python dependencies. To update the lockfile:
+# $ bazel run //:python-requirements.update
 compile_pip_requirements(
     name = "python-requirements",
-    timeout = "moderate",
-    requirements_in = "requirements.in",
+    src = "requirements.in",
+    # NOTE: the requirements.txt reports the system python's version, not
+    # the one specified in MODULE.bazel.
+    # https://rules-python.readthedocs.io/en/latest/pypi-dependencies.html#pip-rules
     requirements_txt = "requirements.txt",
-    tags = [
-        "requires-network",
-    ],
 )
 
 test_suite(
