--- a/ic-os/setupos/envs/local-base-prod/BUILD.bazel
+++ b/ic-os/setupos/envs/local-base-prod/BUILD.bazel
@@ -1,5 +1,5 @@
 load("//ic-os:defs.bzl", "icos_build")
-load("//ic-os/dev-tools/bare_metal_deployment:tools.bzl")
+#load("//ic-os/dev-tools/bare_metal_deployment:tools.bzl", "launch_bare_metal")
 load("//ic-os/setupos:defs.bzl", "image_deps")
 
 # The macro contains several targets.
