fix: comment out broken launch bare metal target (#1980)
Test broken after https://github.com/dfinity/ic/pull/1959
Fix redfish dependency after https://github.com/dfinity/ic/pull/1959
Full context:
https://dfinity.slack.com/archives/C026JQ1B2AF/p1728578113038139

---------

Co-authored-by: IDX GitHub Automation <IDX GitHub Automation>

--- a/ic-os/setupos/envs/prod/BUILD.bazel
+++ b/ic-os/setupos/envs/prod/BUILD.bazel
@@ -1,5 +1,6 @@
 load("//ic-os:defs.bzl", "icos_build")
-load("//ic-os/dev-tools/bare_metal_deployment:tools.bzl", "launch_bare_metal")
+
+#load("//ic-os/dev-tools/bare_metal_deployment:tools.bzl", "launch_bare_metal")
 load("//ic-os/setupos:defs.bzl", "image_deps")
 
 # The macro contains several targets.
@@ -14,7 +15,7 @@ icos_build(
     vuln_scan = False,
 )
 
-launch_bare_metal(
-    name = "launch_bare_metal",
-    image_zst_file = ":disk-img.tar.zst",
-)
+# launch_bare_metal(
+#     name = "launch_bare_metal",
+#     image_zst_file = ":disk-img.tar.zst",
+# )
