--- a/rs/async_utils/BUILD.bazel
+++ b/rs/async_utils/BUILD.bazel
@@ -17,12 +17,16 @@ rust_library(
         "@crate_index//:futures",
         "@crate_index//:futures-util",
         "@crate_index//:hyper",
+        "@crate_index//:hyper_0_14_27",
         "@crate_index//:slog",
         "@crate_index//:sync_wrapper",
-        "@crate_index//:thiserror",
+        "@crate_index//:thiserror", 
         "@crate_index//:tokio",
         "@crate_index//:tonic",
     ],
+    aliases = {
+        "@crate_index//:hyper_0_14_27": "hyper_legacy",
+    },
 )
 
 rust_test(
