--- a/rs/async_utils/Cargo.toml
+++ b/rs/async_utils/Cargo.toml
@@ -15,6 +15,7 @@ bytes = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
 hyper = { workspace = true }
+hyper-legacy = { package = "hyper", version = "0.14.27", features = ["full"] }
 slog = { workspace = true }
 sync_wrapper = { workspace = true }
 thiserror = { workspace = true }
