inlined bn_integration_test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -349,6 +349,9 @@ members = [
     "rs/test_utilities/types",
     "rs/test_utilities/tmpdir",
     "rs/tests",
+    "rs/tests/boundary_nodes",
+    "rs/tests/boundary_nodes/integration_test_common",
+    "rs/tests/boundary_nodes/utils",
     "rs/tests/ckbtc",
     "rs/tests/consensus",
     "rs/tests/consensus/orchestrator",
